[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rayon = "1.10.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24.6"
base64 = "0.21.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.61", features = ["File", "Blob", "HtmlImageElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "console"] }
js-sys = "0.3.61"
futures = "0.3"

